src/components/layout/MenuBar/MenuBar.module.scss
@import "../../../styles/settings.scss";

.root {
  box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
  background-color: $menu-bar-background-color;

  :global(.container) > :global(.row) {
    height: 84px;
  }

  .menu {
    display: flex;
    align-self: stretch;

    ul {
      margin: 0;
      padding: 0;
      display: flex;

      li {
        list-style: none;
        display: flex;
        align-items: stretch;
      }
    }

    a {
      color: $text-color;
      text-transform: uppercase;
      font-size: 12px;
      padding: 1rem;
      text-decoration: none;
      display: flex;
      align-items: center;
      border-top: 4px solid $menu-bar-top-border-color;
      font-weight: 500;
      letter-spacing: 1px;

      &:hover,
      &.active {
        background-color: $menu-bar-background-color-hover;
        color: $menu-bar-font-color-hover;
        border-color: $menu-bar-border-color-hover;
      }

      &.active {
        border-color: $text-color;
      }
    }
  }
  .dropdown {
    display: none;
  }
  .search {
    padding-top: 20px;
  }
}

@media (max-width: 1200px) {
  .root {
    height: 130px;
    .wrapper {
      .menu {
        button {
          padding: 10px;
        }
      }
    }
  }
}

@media (max-width: 992px) {
  .root {
    :global(.container) > :global(.row) {
      height: fit-content;
    }
    .wrapper {
      flex-direction: column;
      align-items: initial;
      margin: 0 auto;
      padding-left: 5rem;

      .search {
        order: 2;

        form {
          width: 552px;

          div {
            width: 50%;
          }
        }
      }

      .menu {
        order: 1;
        width: 100%;

        ul {
          margin: 0;
        }

        button {
          padding: 1rem;
        }
      }
    }
  }
}

@media (max-width: 768px) {
  .root{
    .wrapper {
      padding: 0;

      .menu {
        a {
          padding: 10px;
        }
      }
      .search {
        form{
          max-width: 460px;
        }
      }
    }
  }
}

@media (max-width: 576px) {
  .root{
    .wrapper{
      flex-direction: row;
      position: relative;

      .menu {
        order: 2;
        visibility: hidden;
        position: absolute;
        top: 0;
        z-index: 111;

        ul{
          flex-direction: column;
          padding-left: 20px;

          li{
            z-index: 1;

            a{
              width: 100%;
            }
          }
        }
        ul::before {
          width: 90px;
          height: 100%;
          display: block;
          position: absolute;
          z-index: 0;
          content: ' ';
          background-color: $feature-box-background;
          box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
        }
      }
      .search {
        order: 1;
        padding-left: 20px;
        form{
          width: 100%;

          button {
            padding-left: 0;
          }
        }
      }
      .dropdown {
        display: block;
        order: 2;
        z-index: 111;
        font-size: 60px;
        padding-top: 15px;
        padding-right: 30px;
        text-align: center;
      }

      .activeMenu {
        visibility: visible;
      }

    }
  }
 
}

@media (max-width: 400px) {

.root{
  .wrapper{
    .search {
      width: 86%;

      from{
        button {
          padding-left: 0;
        }
        
        svg {
          transform: scale(0.8);
        }
      }
    }
  }
}
}

